--- a/data-in/data/book-settings.json
+++ b/data-in/data/book-settings.json
@@ -2,7 +2,14 @@
   "title": "Thirukkural PDF Commentary/Translation 1080",
   "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/book-html/books-listing.ftl",
   "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out/books.html",
-
+  "pdfFontSettings": {
+    "englishFontName":"Nirmala UI",
+    "englishBodyFontSize":12.5,
+    "englishHeadingFontSize":13.0,
+    "tamilFontName":"TSCu_SaiIndira",
+    "tamilBodyFontSize":12.0,
+    "tamilHeadingFontSize":13.0
+  },
   "bookConfigurationList": [
     {
       "author": "திருவள்ளுவர்",
