agaramudhali - initial release updates

--- a/data-in/data/agara-mudhali-settings.json
+++ b/data-in/data/agara-mudhali-settings.json
@@ -25,8 +25,8 @@
       "வ"
     ],
     "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/agaramudhali/agaramudhali.ftl",
-    "outputFilename":"agaramudhali-",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out/agaramudhali"
+    "outputFilename":"am-",
+    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out/am"
   }
 ]
 
