--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # DataSource configuration for SQLite
-spring.datasource.url=jdbc:sqlite:file:D:/git/thirukkural-admin-ui-app/thirukkuralAdmin/dev.sqlite
+#spring.datasource.url=jdbc:sqlite:file:D:/git/thirukkural-admin-ui-app/thirukkuralAdmin/dev.sqlite
+spring.datasource.url=jdbc:sqlite:file:/Users/mohannarayanaswamy/git/thirukkural-admin-ui-app-main/thirukkuralAdmin/dev.sqlite
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 
